--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,40 @@
-version: "3.9"
-
 services:
+
   zookeeper:
-    image: bitnami/zookeeper:3.9
+    image: confluentinc/cp-zookeeper:7.6.1
     container_name: zookeeper
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "2181:2181"
 
+
   kafka:
-    image: bitnami/kafka:3.7
+    image: confluentinc/cp-kafka:7.6.1
     container_name: kafka
     depends_on:
       - zookeeper
-    environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      - ALLOW_PLAINTEXT_LISTENER=yes
     ports:
       - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+
+
 
   kafka-ui:
-    image: provectuslabs/kafka-ui:latest
+    image: provectuslabs/kafka-ui:v0.7.2
+    container_name: kafka-ui
     depends_on:
       - kafka
     environment:
-      - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     ports:
       - "9000:8080"
 
@@ -37,143 +42,151 @@ services:
     image: postgres:16
     container_name: eco-postgres
     environment:
-      - POSTGRES_USER=eco_user
-      - POSTGRES_PASSWORD=eco_pass
-      - POSTGRES_DB=eco_label
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: eco_user
+      POSTGRES_PASSWORD: eco_pass
+      POSTGRES_DB: eco_label
+    # ports:
+    #   - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   eureka:
     build:
       context: ./eureka
+    container_name: eureka
     depends_on:
       - postgres
-    environment:
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - SPRING_PROFILES_ACTIVE=prod
     ports:
       - "8761:8761"
+    restart: always
 
   authservice:
     build:
       context: ./authservice
+    container_name: authservice
     depends_on:
       - postgres
       - eureka
+      - kafka
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - JWT_SECRET=ChangeMeSuperSecret
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      JWT_SECRET: ChangeThisToAReallyLongSecureJwtSecretKeyAtLeast32Chars
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
       - "8080:8080"
+    restart: always
 
   ml-service:
     build:
       context: ./ml-service
+    container_name: ml-service
+    environment:
+      PYTHONUNBUFFERED: "1"
     ports:
       - "8086:8086"
-    environment:
-      - PYTHONUNBUFFERED=1
-    # Note: Le service ML peut être lent au démarrage (téléchargement des modèles)
+    restart: always
 
   parserproduitservice:
     build:
       context: ./parserproduitservice
+    container_name: parserproduitservice
     depends_on:
       - kafka
       - postgres
       - eureka
       - ml-service
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - ML_SERVICE_URL=http://ml-service:8086
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      ML_SERVICE_URL: http://ml-service:8086
     ports:
       - "8081:8081"
+    restart: always
 
   nlpingredientservice:
     build:
       context: ./nlpingredientservice
+    container_name: nlpingredientservice
     depends_on:
       - kafka
       - postgres
       - eureka
       - ml-service
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - ML_SERVICE_URL=http://ml-service:8086
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      ML_SERVICE_URL: http://ml-service:8086
     ports:
       - "8082:8082"
+    restart: always
 
   lcaliteservice:
     build:
       context: ./lcaliteservice
+    container_name: lcaliteservice
     depends_on:
       - kafka
       - postgres
       - eureka
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
       - "8083:8083"
+    restart: always
 
   scoringservice:
     build:
       context: ./scoringservice
+    container_name: scoringservice
     depends_on:
       - kafka
       - postgres
       - eureka
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
       - "8084:8084"
+    restart: always
 
   widgetapi:
     build:
       context: ./widgetapi
+    container_name: widgetapi
     depends_on:
       - kafka
       - postgres
       - eureka
       - scoringservice
     environment:
-      - DB_HOST=postgres
-      - DB_USERNAME=eco_user
-      - DB_PASSWORD=eco_pass
-      - DB_NAME=eco_label
-      - EUREKA_SERVER=http://eureka:8761/eureka
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/eco_label
+      SPRING_DATASOURCE_USERNAME: eco_user
+      SPRING_DATASOURCE_PASSWORD: eco_pass
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://eureka:8761/eureka
+      KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     ports:
       - "8085:8085"
+    restart: always
 
   prometheus:
     image: prom/prometheus:v2.54.1
+    container_name: prometheus
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     ports:
@@ -181,13 +194,13 @@ services:
 
   grafana:
     image: grafana/grafana:11.2.0
+    container_name: grafana
     depends_on:
       - prometheus
-    ports:
-      - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    ports:
+      - "3001:3000"
 
 volumes:
   postgres_data:
-
