--- a/nlpingredientservice/src/main/resources/application.yml
+++ b/nlpingredientservice/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
+        spring.json.type.mapping: "com.example.parserproduitservice.dto.ProductParsedEvent:com.example.nlpingredientservice.dto.ProductParsedEvent"
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
