--- a/widgetapi/src/main/resources/application.yml
+++ b/widgetapi/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
+        spring.json.type.mapping: "com.example.scoringservice.dto.ScorePublishedEvent:com.example.widgetapi.dto.ScorePublishedEvent"
 
 eureka:
   client:
