--- a/ci/docker-compose.jenkins.yml
+++ b/ci/docker-compose.jenkins.yml
@@ -10,6 +10,12 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+    command: >
+      bash -c "
+      apt-get update &&
+      apt-get install -y docker.io docker-compose-plugin &&
+      exec /usr/bin/tini -- /usr/local/bin/jenkins.sh
+      "
 
 volumes:
   jenkins_home:
